Feature: Integrate image display for chart sheets in Group D and F, maintain Handsontable for data sheets

--- a/Group F/group-f.html
+++ b/Group F/group-f.html
@@ -169,7 +169,7 @@ cat > "Group D/group-d.html" << 'EOF'
 
         const SHEET_DIMENSIONS = {
             'Balnce sheet ( TEAM D ).xlsx - Sheet1': { type: 'handsontable', rows: 20, cols: 5 }, // Example dimensions
-            'Balnce sheet ( TEAM D ).xlsx - Pie Chart': { type: 'image', path: '../Group D/PieChart.png' }
+            'Balnce sheet ( TEAM D ).xlsx - Pie Chart': { type: 'image', path: '/Group D/PieChart.png' }
         };
 
 
